tooling/nargo_cli/tests/snapshots/execute__tests__missing_closure_env_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17764413364161807676",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1WS24CMQz1fCGlqFV7gB6gi4bCAN3NoheJQHOOOXo7kp/imoSiNmGFJeSJ7LxnP4fJFOStYF+rNQVyevb2f7ZKiGWDhZ4z5HywN+xLEa8SNmsUb0r8vd10JtBfwvrXhjFz6gPMDPh2xjifo8fXvUy25LU8Q9gz//7dk39e8rNRe3LMNqP29jlQP7gW3KtV+pRCnyLiiX7OE1Yq3SoR65P09O4eKT5j8NbpeQ/AbhRvGny7hf4tnRpiM8FdqthcxM697Cu1lj1NGFuBq/NgD3SqhT436KMJ5NYqhtwX9tBa9pvyf/EkcElx3ebs7ZI5Y33JnJH7yh5at2JP7jm3v9Sv3/Wh+t9U/fUV6wfXgvy3TT2m59/trQVvNXod9LmS/I3K73h9F+mj/2Odw86thrUbXOeOx83BaZ0mi91zuD9id+IXcN7hQD0LAAA=",
  "debug_symbols": "ldXBqoQgGAXgd3HdQlPLepXLZbCyQRALqwuX6N3HhmkIcXM2wR//p8hZnJ0MptueD+vHaSHtz07c1OvVTj5O+1GQLljn7PNx/03o+WHivb/M2p/jsuqwkparghg/kFbQqEfrDGklPX4LwiS4X4H7NbivcvuMyg9gTKaiQUVJYcFgUcKCw0LAQsKigkU2cVZekTNep0LBokEFp7DIZy7EJWT6cl7CgsNCwELCooJFDQsFi3zm1TfBOk1QUFgwWJSwyGfesEs0KhUCFhIWFSokeMcRpz8drO6c+dTYuPn+1mrr/2ySgpvD1JthC+asulvLnckKVUgej41HvwA=",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) {\n    let x1 = &mut 42;\n    let set_x1 = |y| { *x1 = y; };\n\n    assert(*x1 == 42);\n    set_x1(44);\n    assert(*x1 == 44);\n    set_x1(*x1);\n    assert(*x1 == 44);\n    assert(x == 42);\n}\n\n#[test]\nfn test_main() {\n    main(42);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/missing_closure_env/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
