tooling/nargo_cli/tests/snapshots/execute__tests__missing_closure_env_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17764413364161807676",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71Vy47CMAx027RslkW72j3tiQNc4GRegmMP/EgE6nf00wHJVsIoBQEplirHsuPxTNo0I2+ZeAMxRWpq8fyaLRL24uigt0xr5uKt+DzIFwnJWsBN2X/H642N8Es4/8pKzz710Z499OeB9Nm3vj9yudhI4vAd0j0f5+eL/Hokawt7+jjbHrXnv8j8ijUUrlPQJw/0yTo80fV5quWgWxHk6iSclu6Hus9YcU163EMMV3G+JS6DHOpYybqM1BrIae0/8BoA5zoJN+bfoC8B1qu88wd4a+0YeFdv5F3dmR/vgtj8E5jfvHF+xRqS//eZNj3+dsesuEXrdQi/eQL8EupnEn928KifnLPZukWzco3buONxfXCo08XCe/AE5NXOrTEJAAA=",
  "debug_symbols": "tZTdaoQwEIXfZa69yJjEv1cpZYkal0CIErVQxHdvUtYibigMy94EJpzvwByGs0Gv2/V+M24YZ2g+NrBjpxYzujBtewatN9aa++38DSw+KH7186RcHOdF+QUaXmWgXQ+NYIEejNXQSLZ/ZoCSqC+I+pKor1J6ZPIBIMozkT1LazykdXU1r99onjOSeSQwSeRHOMjLK5GTCU4mBJlI3hAKcRDylVgLknkkkieHxd8C5dMCFZmoqQRnZCJ9Hv9kxXMywcmEoBF7mL6UN6q1+tFew+q6U5kt35O+9Nrkx073q9ex4U7lFjPkRSYw2AbrHw==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) {\n    let x1 = &mut 42;\n    let set_x1 = |y| { *x1 = y; };\n\n    assert(*x1 == 42);\n    set_x1(44);\n    assert(*x1 == 44);\n    set_x1(*x1);\n    assert(*x1 == 44);\n    assert(x == 42);\n}\n\n#[test]\nfn test_main() {\n    main(42);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/missing_closure_env/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
